refactor: rename company to organization
