# api/swagger.yaml
@@ -1567,7 +1567,7 @@ definitions:
       name:
         description: 使用者中文名稱
         type: string
-      organization_id:
+      org_id:
         description: 組織ID
         type: string
       password:
@@ -1585,7 +1585,7 @@ definitions:
     required:
     - email
     - name
-    - organization_id
+    - org_id
     - password
     - role_id
     - user_name
@@ -1726,7 +1726,7 @@ definitions:
       old_password:
         description: 使用者舊密碼
         type: string
-      organization_id:
+      org_id:
         description: 組織ID
         type: string
       otp_auth_url:
