# internal/router/middleware/jwe.go
@@ -33,7 +33,7 @@ func Verify() gin.HandlerFunc {
 		ctx.Set("resource_id", j.Other["resource_id"])
 		ctx.Set("user_id", j.Other["user_id"])
 		ctx.Set("role", j.Other["role"])
-		ctx.Set("organization_id", j.Other["organization_id"])
+		ctx.Set("org_id", j.Other["org_id"])
 		ctx.Next()
 	}
 }
